<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatabaseActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/enter_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_name"
                android:layout_margin="15dp"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />

            <LinearLayout
                android:id="@+id/ll_view_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_password"
                android:orientation="horizontal"
                android:weightSum="2.5">

                <Button
                    android:id="@+id/btn_view_data"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/view_data" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="2dp"
                    android:layout_weight="0.5" />

                <Button
                    android:id="@+id/btn_add_data"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/add_data" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_update"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_view_add"
                android:orientation="horizontal"
                android:weightSum="4.5">

                <EditText
                    android:id="@+id/et_current_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:background="@color/colorPrimary"
                    android:text="@string/current_name" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="3dp"
                    android:layout_weight="0.2" />
                <EditText
                    android:id="@+id/et_new_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:background="@color/colorPrimary"
                    android:text="@string/new_name" />
                <View
                    android:layout_width="2dp"
                    android:layout_height="3dp"
                    android:layout_weight="0.2" />

                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/update" />

            </LinearLayout>


        </RelativeLayout>

    </ScrollView>
</RelativeLayout>